[package]
name = "ipp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipp = "3.0.2"
actix-web = "4.0.1"
futures-util = "0.3.21"
log = "0.4.16"
env_logger = "0.9.0"
reqwest = "0.11.10"
anyhow = "1"
clap = { version = "3", features = ["derive"] }