[package]
name = "ipp-proxy"
version = "0.1.0"
edition = "2021"
default-run = "ipp-proxy"

[dependencies]
ipp = "3.0.2"
actix-web = "4.0.1"
futures-util = "0.3.21"
log = "0.4.16"
env_logger = "0.9.0"
reqwest = "0.11.10"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "sqlite" ] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "ipp-proxy"
path = "src/main.rs"

